--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-sm-6 wow fadeInRight">
                     <h3 class="column-title">Nosotros Cuidamos de tus Mascotas</h3>
-                    <p>En VIPet, entendemos que cada mascota es un miembro muy importante de la familia. Con dos años de experiencia, somos una clínica veterinaria que se esfuerza por ofrecer una atención personalizada y una combinación única de medicina veterinaria y amor para cada uno de nuestros pacientes.</p>
+                    <p>En VIPet, entendemos que cada mascota es un miembro muy importante de la familia. Somos una clínica veterinaria que se esfuerza por ofrecer una atención personalizada y una combinación única de medicina veterinaria y amor para cada uno de nuestros pacientes.</p>
                     <p>Nuestra dedicación va más allá del tratamiento médico. Trabajamos estrechamente con diversas fundaciones para asegurar que cada mascota reciba el cuidado y el cariño que merece. Nuestro enfoque está en crear un ambiente cálido y acogedor para ti y tu mascota, donde cada visita sea una experiencia positiva.</p>
                     <p>Ven y descubre cómo VIPet puede convertirse en tu aliado confiable para el bienestar de tu mascota. Estamos comprometidos con el cuidado excepcional y la atención personalizada, porque sabemos que cada peludito es único y especial.</p>
                     <!-- <a class="btn btn-primary" href="#">Aprende Más</a> -->
@@ -160,8 +160,8 @@
                                 <i class="fa fa-stethoscope"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Consulta General</h4>
-                                <p>Realizamos consultas generales para evaluar el estado de salud de tu mascota y proporcionar el mejor tratamiento.</p>
+                                <h4 class="media-heading">Consulta</h4>
+                                <p>Realizamos consultas generales y especializadas para evaluar el estado de salud de tu mascota y proporcionar el mejor tratamiento.</p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
