Update css to resize pictures final

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="carousel-content">
-                                    <h2><span>Tu mascota</span> es parte de nuestra familia</h2>
-                                    <p>Atención veterinaria excepcional: Tu confianza
+                                    <h2><span>Tu mascota</span> es<br>parte de nuestra familia</h2>
+                                    <p>Atención veterinaria excepcional:<br>Tu confianza
                                         es nuestra dedicación</p>
                                 </div>
                             </div>
@@ -68,8 +68,8 @@
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="carousel-content">
-                                    <h2><span>24/7</span> Cuidado de Mascotas</h2>
-                                    <p>Dedicados a la salud y felicidad de cada peludito, día y noche.</p>
+                                    <h2><span>24/7</span> Cuidado de<br>Mascotas</h2>
+                                    <p>Dedicados a la salud y felicidad<br>de cada peludito, día y noche.</p>
                                 </div>
                             </div>
                         </div>
